SERVER-61387 Make sure setRandomSeed() prints the exact value it chose